[package]
name = "cmdparser"
version = "0.1.0"
authors = ["Nenad Lukic <nenadspp@gmail.com>"]
description = "A simple argument parser for Rust"
license = "WTFPL"
documentation = "https://github.com/lnenad/cmd-parser-rs"
homepage = "https://github.com/lnenad/cmd-parser-rs"
repository = "https://github.com/lnenad/cmd-parser-rs"

[dependencies]
