[package]
name = "cmdparser"
version = "0.2.0"
authors = ["Nenad Lukic <nenadspp@gmail.com>"]
description = "A simple argument parser for Rust"
license = "WTFPL"
keywords = ["args", "parser", "arguments", "cmd", "flags"]
categories = ["command-line-utilities", "development-tools", "parsing"]
documentation = "https://github.com/lnenad/cmd-parser-rs"
homepage = "https://github.com/lnenad/cmd-parser-rs"
repository = "https://github.com/lnenad/cmd-parser-rs"
readme = "README.md"
exclude = [
    "main.rs",
    "benchargs.txt"
]

[dependencies]
